# progcem2

./: CMakeLists.txt  lib.cpp  main.cpp
.github/workflows/: release.yml
src/: CMakeLists.txt  CmakeLists.txt  Double.cpp  Double.h  Dynamic.cpp  Dynamic.h  IPParser.hpp  IPStruct.cpp  IPStruct.hpp  main.cpp  single.cpp  single.h
src/Containers/: CMakeLists.txt
src/Containers/Array/: DynamicArray.hpp
src/Containers/List/: DoublyLinkedList.hpp  SinglyLinkedList.hpp
unittests/: IPParserTests.cpp
